--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "author": {
-    "name": "Abhinav Juneja",
-    "email": "abnvjuneja@gmail.com"
+    "name": "Shishir M",
+    "email": "mshishirrai@live.com"
   },
   "scripts": {
     "ng": "ng",
@@ -15,13 +15,7 @@
     "e2e": "ng e2e",
     "packagr": "ng-packagr -p package.json"
   },
-  "tags": [
-    "seats",
-    "layout",
-    "bus",
-    "cinema",
-    "bus layout"
-  ],
+  
   "private": false,
   "dependencies": {
     "@angular-devkit/core": "^0.4.6",
